tests/errors/string02.c
int main(void){
	char* string = " . ;
}
